crosshair/examples/PEP316/bugs_detected/hash_consistent_with_equals.out
hash_consistent_with_equals.py:30: error: "post: implies(__return__, hash(self) == hash(other))" yields false when calling __eq__(self = Apples(count=1, kind=''), other = Apples(count=2, kind='')) (which returns True)
